tests/baselines/reference/parser_breakNotInIterationOrSwitchStatement2.errors.txt
==== tests/cases/compiler/parser_breakNotInIterationOrSwitchStatement2.ts (1 errors) ====
    while (true) {
      function f() {
        break;
        ~~~~~~
!!! parser_breakNotInIterationOrSwitchStatement2.ts(3,5): error TS1107: Jump target cannot cross function boundary.
      }
    }